Reset tracking and apply new .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,43 @@
-# Virtual environments
+# =====================================================
+# Virtual Environments (DO NOT PUSH)
+# =====================================================
 venv/
 newenv/
 env/
 
-# Python cache
+# =====================================================
+# Python Cache Files
+# =====================================================
 __pycache__/
 *.pyc
 *.pyo
 *.pyd
 
-# OS files
+# =====================================================
+# Environment Variables
+# =====================================================
+.env
+
+# =====================================================
+# Notebook Checkpoints
+# =====================================================
+.ipynb_checkpoints/
+
+# =====================================================
+# IDE / Editor Settings
+# =====================================================
+.vscode/
+.idea/
+
+# =====================================================
+# OS Generated Files
+# =====================================================
 .DS_Store
 Thumbs.db
 
-# Environment files
-.env
-
-# Notebook checkpoints
-.ipynb_checkpoints/
-
-# VS Code
-.vscode/
-
-# Logs
+# =====================================================
+# Logs & Temporary Files
+# =====================================================
 *.log
-
-# Temporary files
 *.tmp
+*.bak
