--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,7 @@
-streamlit==1.32.2
-pandas==2.1.4
-numpy==1.26.4
-scikit-learn==1.4.2
-matplotlib==3.8.2
-joblib==1.3.2
-xgboost==1.7.6
-shap==0.44.1
+streamlit
+pandas
+numpy
+scikit-learn
+matplotlib
+joblib
+xgboost
